--- a/style.css
+++ b/style.css
@@ -74,8 +74,20 @@ img {
   width: 100%;
 }
 
+.btn--big{
+  text-decoration: none;
+  background-color: #087f5b;
+  color: #fff;
+  padding: 10px 20px;
+  text-transform: uppercase;
+}
+
 /* FEATURES */
 .features-icon {
+  stroke: #087f5b;
+  width: 32px;
+  height: 32px;
+  margin-bottom: 16px;
 }
 
 .features-title {
@@ -90,6 +102,9 @@ img {
 
 /* TESTIMONIAL */
 .testimonial-section {
+  background-color: #087f5b;
+  color: #fff;
+  padding: 20px;
 }
 
 .testimonial-box {
@@ -136,12 +151,24 @@ h3 {
 }
 
 .chair-icon {
+  stroke: #087f5b;
+  width: 24px;
+  height: 24px;
 }
 
 .chair-price {
   display: flex;
   justify-content: space-between;
   font-size: 20px;
+}
+
+.btn--small{
+  text-decoration: none;
+  text-transform: uppercase;
+  background-color: #087f5b;
+  color: #fff;
+  font-size: 14px;
+  padding: 5px 10px;
 }
 
 footer {
