--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ h2 {
   column-gap: 80px;
 }
 
+
 /* ------------------------ */
 /* COMPONENT STYLES */
 /* ------------------------ */
@@ -75,14 +76,28 @@ h1 {
 
 img {
   width: 100%;
+  border-radius: 12px;
+}
+
+.btn:link,
+.btn:visited {
+  background-color: #087f5b;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 500;
+  display: inline-block;
+  border-radius: 12px;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #099268;
 }
 
 .btn--big{
-  text-decoration: none;
-  background-color: #087f5b;
-  color: #fff;
-  padding: 10px 20px;
-  text-transform: uppercase;
+  font-size: 18px;
+  padding: 16px 32px;
 }
 
 /* FEATURES */
@@ -107,7 +122,8 @@ img {
 .testimonial-section {
   background-color: #087f5b;
   color: #fff;
-  padding: 20px;
+  padding: 24px;
+  border-radius: 12px;
 }
 
 .testimonial-box {
@@ -133,7 +149,12 @@ img {
   blur of the shadow->
   Scale the shadow up or radius(optional)->color*/
   box-shadow: 0 20px 30px 0 rgba(0,0,0,0.1);
+  border-radius: 12px;
+}
 
+.chair img {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 .chair-box {
   padding: 24px;
@@ -173,10 +194,6 @@ h3 {
 }
 
 .btn--small{
-  text-decoration: none;
-  text-transform: uppercase;
-  background-color: #087f5b;
-  color: #fff;
   font-size: 14px;
   padding: 5px 10px;
 }
